navbar fixed alignement

--- a/qtify/src/components/Navbar/Navbar.css
+++ b/qtify/src/components/Navbar/Navbar.css
@@ -5,4 +5,5 @@
   align-items: center;
   justify-content: space-between;
   padding-left: 24px;
+  padding-right: 24px;
 }
